# peekaboo

./: .gitignore
company-analyzer-svc/: .dockerignore  Dockerfile  pyproject.toml  taskfile.yaml
company-analyzer-svc/company_analyzer_svc/: main.py
company-analyzer-svc/company_analyzer_svc/health/: __init__.py  router.py
company-analyzer-svc/tests/: conftest.py
company-analyzer-svc/tests/health/: test_health_get.py
web/: craco.config.js  package.json
web/public/: index.html  manifest.json
web/src/: App.tsx
web/src/components/Head/: Head.tsx
web/src/components/Layout/: Layout.tsx
web/src/config/: index.ts
web/src/features/misc/routes/: Landing.tsx  NotFound.tsx  styles.ts
web/src/libs/: react-query.ts
web/src/providers/: app.tsx
web/src/routes/: index.tsx  public.tsx
