[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "company-analyzer-svc"
version = "0.1.0"
description = ""
authors = ["Itay Ozery <iozery@cisco.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.108.0"
uvicorn = { extras = ["standard"], version = "^0.25.0" }


[tool.poetry.group.dev.dependencies]
ruff = "^0.0.277"
pyright = "^1.1.316"
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
black = "^23.3.0"
isort = "^5.12.0"
httpx = "^0.24.1"


[tool.isort]
profile = "black"

[tool.pytest.ini_options]
addopts = "--cov=sample_service"